deploy/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        imagePullPolicy: Always
        image: nmalhotr/webserver:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
          name: http-server
        livenessProbe:
          httpGet:
            path: "/healthz"
            port: 8080
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: "/healthz"
            port: 8080
          failureThreshold: 5
