deploy/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  selector:
    app: webserver
  ports:
  - port: 80
    targetPort: 8080
    name: http-server
    nodePort: 32220
  type: NodePort
